Fixed overflow hidden issues and other small fixes

--- a/src/app/pages/crew/crew.component.scss
+++ b/src/app/pages/crew/crew.component.scss
@@ -144,8 +144,8 @@
       }
 
       @media only screen and (max-width: $tabletBreakpoint) {
-        width: .62rem;
-        height: .62rem;
+        width: .75rem;
+        height: .75rem;
       }
   
     }
